[package]
name = "unlock-bonk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
hex = "0.4.3"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
solana-client = "2.1.21"
solana-sdk = "2.1.21"
solana-system-interface = "1.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9.4"